--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="splash">created_by</string>
+    <string name="created_by_Skylar">create</string>
+    <string name="Save_your_style_today">catch</string>
 </resources>
