--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="splash">created_by</string>
     <string name="created_by_Skylar">create</string>
     <string name="Save_your_style_today">catch</string>
+    <string name="take_photo">cam</string>
 </resources>
