change layout for camera, add styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="splash">created_by</string>
     <string name="created_by_Skylar">create</string>
     <string name="Save_your_style_today">catch</string>
-    <string name="take_photo">cam</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="Save_your_style_here">Save your style here</string>
 </resources>
