--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,5 @@
     <string name="created_by_Skylar">create</string>
     <string name="Save_your_style_today">catch</string>
     <string name="take_photo">Take Photo</string>
-    <string name="Save_your_style_here">Save your style here</string>
+    <string name="Save_your_style_here">Save your Beer Style here!</string>
 </resources>
